[project]
name = "sddip"
version = "0.1.0"
description = "Stochastic Dual Dynamic Integer Programming"
authors = [
    { name = "Leo Schleier", email = "43878374+leoschleier@users.noreply.github.com" },
]
license = "MIT"
readme = { file = "docs/README.md", content-type = "text/markdown" }
keywords = ["sddip"]
classifiers = ["Programming Language :: Python :: 3.12"]
requires-python = "==3.12.*"
dependencies = [
    "gurobipy>=13.0.0",
    "matplotlib>=3.10.8",
    "natsort>=8.4.0",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
]

[project.urls]
HomePage = "https://github.com/leoschleier/sddip"

[dependency-groups]
dev = ["pyright>=1.1.407", "pytest>=9.0.2", "ruff>=0.14.10"]

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "sddip"
module-root = ""

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
pythonVersion = "3.12"

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401", # Use of typing.Any  
    "COM812", # Missing trailing comma (formatter)
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E401"] # Unused import
"tests/*" = ["S101"]     # Use of assert detected

[tool.ruff.lint.pycodestyle]
max-doc-length = 72

[tool.ruff.lint.pydocstyle]
convention = "google"
